fixed menu footer overflowY, adjust menu item font

--- a/scss/Menu-Bastille.scss
+++ b/scss/Menu-Bastille.scss
@@ -7,9 +7,27 @@ body {
     width: 100%;
     margin: auto;
 }
+/* media query to realign footer for desktop */
+@media only screen and (min-width: 992px) {
+    .footer {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 5px;
+        &__logo {
+            width: 150px !important;
+            padding-top: 5px !important;
+        }
+    }
+}
 /* media query to truncate long item titles on small screens */
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 430px) {
     .menu__item {
+        .menu__item__title {
+            font-size: 14px;
+        }
+        .menu__item__subtitle {
+            font-size: 10px;
+        }
         :hover .menu__item__title--1 {
             width: 150px;
             white-space: nowrap;
@@ -203,26 +221,27 @@ a {
         
         
     }
-    button {
-        margin: auto; /* centers button horizontally */
-        display: block; /* centers button horizontally */
-        width: 180px;
-        height: 50px;
-        margin-top: 20px;
-        margin-bottom: 10px;
-        border-radius: 25px;
-        border: 0;
-        color: white;
-        font-family: $secondaryFont;
-        background-image: linear-gradient($secondaryColor, $primaryColor);
-        box-shadow: 0px 0px 6px 0.5px gray;
-        &:hover {
-            box-shadow: 0px 0px 12px 0.5px gray;
-            background: linear-gradient(lighten($secondaryColor, 3), lighten($primaryColor, 3));
-        }
+button {
+    margin: auto; /* centers button horizontally */
+    display: block; /* centers button horizontally */
+    width: 180px;
+    height: 50px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border-radius: 25px;
+    border: 0;
+    color: white;
+    font-family: $secondaryFont;
+    background-image: linear-gradient($secondaryColor, $primaryColor);
+    box-shadow: 0px 0px 6px 0.5px gray;
+    &:hover {
+        box-shadow: 0px 0px 12px 0.5px gray;
+        background: linear-gradient(lighten($secondaryColor, 3), lighten($primaryColor, 3));
     }
+}
 
 .footer {
+    overflow-y: hidden;
     background-color: darken($darkGray, 70);
     color: white;
     line-height: 30px; /* adds space above and below each item */
@@ -234,24 +253,24 @@ a {
     }
     .suggest {
         display: flex;
-        padding-left: 27px;
         &__icon {
-            position: relative;
-            top: 7px;
-            padding-right: 10px;
+            width: 20px;
+            padding-left: 20px;
+            padding-right: 30px;
+            transform:translateY(8px);
         }
     }
     .partner {
         display: flex;
         &__icon {
-            position: relative;
-            top: 7px;
-            padding-right: 10px;
+            width: 20px;
             padding-left: 20px;
+            padding-right: 30px;
+            transform:translateY(8px);
         }
     }
     .legal, .contact {
-        padding-left: 20px;
+        padding-left: 50px;
     }
     .contact {
         color: white !important;
